[package]
name = "dpt"
version = "0.1.0"
authors = ["mapkts <mapkts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
clap = { version = "2.33", features = ["yaml"] }
encoding_rs = "0.8"
log = "0.4"
fantoccini = "0.17"
chrono = "0.4"
calamine = "0.16"
encoding = "0.2"
env_logger = "0.8"
walkdir = "2.3"
toml = "0.5"
fxhash = "0.2"
