[package]
authors = ["mapkts <mapkts@gmail.com>"]
edition = "2018"
name = "dpt"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.16"
chrono = "0.4"
clap = {version = "2.33", features = ["yaml"]}
encoding = "0.2"
encoding_rs = "0.8"
env_logger = "0.8"
fantoccini = "0.17"
fxhash = "0.2"
indexmap = "1.6"
lazy_static = "1.4"
log = "0.4"
toml = "0.5"
walkdir = "2.3"
