[package]
authors = ["mapkts <mapkts@gmail.com>"]
edition = "2018"
name = "dpt"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
admerge = "0.1"
calamine = "0.16"
chrono = "0.4"
clap = {version = "2.33", features = ["yaml"]}
encoding = "0.2"
encoding_rs = "0.8"
env_logger = "0.8"
fantoccini = {version = "0.17", features = ["native-tls"]}
fcc = "0.4"
futures = "0.3.5"
fxhash = "0.2"
indexmap = "1.6"
lazy_static = "1.4"
log = "0.4"
serde_json = "1.0"
tokio = {"version" = "1.2", features = ["rt", "macros", "time", "rt-multi-thread"]}
tokio-retry = "0.2"
toml = "0.5"
walkdir = "2.3"
webdriver = "0.43"
ctrlc = "3.1"
